--- a/templates/default/sv-elasticsearch-run.erb
+++ b/templates/default/sv-elasticsearch-run.erb
@@ -2,7 +2,6 @@
 exec 2>&1
 
 export ES_HOME='<%= "#{node.elasticsearch[:dir]}/elasticsearch" %>'
-export ES_CLASSPATH=$ES_CLASSPATH:$ES_HOME/lib/*:$ES_HOME/lib/sigar/*
 export ES_HEAP_SIZE=<%= node.elasticsearch[:max_mem] %>
 
 export ES_JAVA_OPTS="
@@ -20,4 +19,6 @@ export SHELL=<%= "/bin/zsh" %>
 export USER=<%= node.elasticsearch[:user] %>
 export GROUP=<%= node.elasticsearch[:group] %>
 
-exec chpst -u $USER:$GROUP /usr/local/bin/elasticsearch
+cd $ES_HOME
+
+exec chpst -u $USER:$GROUP bin/elasticsearch -f
